<?xml version="1.0"?>
<package>
  <name>eus_cddlib</name>
  <description>eus_cddlib</description>
  <version>0.0.0</version>
  <maintainer email="hiraoka@jsk.t.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libcdd-dev</build_depend>

  <run_depend>euslisp</run_depend>
  <run_depend>libcdd-dev</run_depend>
</package>
